--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -1331,7 +1331,7 @@
     "            raise ValueError(f\"{value} is not a valid category\")\n",
     "        return value\n",
     "# Specify the OpenAI API Key\n",
-    "openai_api_key = 'sk-proj-mcb0iV62IhxFxgnxi6BHT3BlbkFJ2kb3bWu5jxEcKWfb2AfE'\n",
+    "openai_api_key = 'OPENAI KEY'\n",
     "# Patch the OpenAI client for instructor\n",
     "openai_client = instructor.patch(openai.OpenAI(api_key=openai_api_key))"
    ]
